@@ -399,6 +399,8 @@ The following extensions are migrated into MediaWiki 1.14:
   new pages in the recent changes IRC feed
 * Ugly tooltips in Special:Statistics were phased out in favor of more direct
   information. Went ahead and rewrote SpecialStatistics to subclass SpecialPage
+* (bug 5506) Links to files on foreign repositories are now shown consistently
+  as bluelinks e.g. in logs and edit summaries
 
 === API changes in 1.14 ===
 
